--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ botocore==1.7.19
 cement==2.8.2
 colorama==0.3.7
 Django==1.11.5
+django-analytical==2.2.2
 django-appconf==1.0.2
 django-debug-toolbar==1.8
 django-imagekit==4.0.1
