--- a/.ebextensions/03_python.config
+++ b/.ebextensions/03_python.config
@@ -8,3 +8,6 @@ container_commands:
   03_collectstatic:
     command: python manage.py collectstatic --noinput
     leader_only: true
+  03_createcachetable:
+    command: python manage.py createcachetable
+    leader_only: true
