--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-analytical==2.2.2
 django-appconf==1.0.2
 django-debug-toolbar==1.8
 django-imagekit==4.0.1
+django-model-utils==3.0.0
 django-solo==1.1.2
 django-storages==1.6.5
 django-tinymce4-lite==1.5.2
