--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
-
-# Elastic Beanstalk Files
 .elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
 .idea/*
 odecopackdb
+/static/web/sass/mdb/*
