--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,13 @@ boto3==1.4.7
 botocore==1.7.19
 cement==2.8.2
 colorama==0.3.7
+diff-match-patch==20121119
 Django==1.11.5
 django-analytical==2.2.2
 django-appconf==1.0.2
 django-debug-toolbar==1.8
 django-imagekit==4.0.1
+django-import-export==0.5.1
 django-model-utils==3.0.0
 django-redis==4.8.0
 django-redisboard==3.0.2
@@ -19,10 +21,14 @@ docker-py==1.7.2
 dockerpty==0.4.1
 docopt==0.6.2
 docutils==0.14
+et-xmlfile==1.0.1
+jdcal==1.3
 jmespath==0.9.3
 jsmin==2.2.2
 mysqlclient==1.3.12
+odfpy==1.3.5
 olefile==0.44
+openpyxl==2.4.9
 pathspec==0.5.0
 pilkit==2.0
 Pillow==4.2.1
@@ -35,7 +41,11 @@ s3transfer==0.1.11
 semantic-version==2.5.0
 six==1.11.0
 sqlparse==0.2.3
+tablib==0.12.1
 tabulate==0.7.5
 termcolor==1.1.0
+unicodecsv==0.14.1
 wcwidth==0.1.7
 websocket-client==0.44.0
+xlrd==1.1.0
+xlwt==1.3.0
