--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ diff-match-patch==20121119
 Django==1.11.5
 django-analytical==2.2.2
 django-appconf==1.0.2
+django-braces==1.11.0
 django-debug-toolbar==1.8
 django-imagekit==4.0.1
 django-import-export==0.5.1
