--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-import-export==0.5.1
 django-model-utils==3.0.0
 django-redis==4.8.0
 django-redisboard==3.0.2
+django-rosetta==0.7.14
 django-solo==1.1.2
 django-storages==1.6.5
 django-tinymce4-lite==1.5.2
@@ -26,6 +27,7 @@ jdcal==1.3
 jmespath==0.9.3
 jsmin==2.2.2
 mailchimp3==2.0.18
+microsofttranslator==0.8
 mysqlclient==1.3.12
 odfpy==1.3.5
 olefile==0.44
@@ -33,6 +35,7 @@ openpyxl==2.4.9
 pathspec==0.5.0
 pilkit==2.0
 Pillow==4.2.1
+polib==1.1.0
 python-dateutil==2.6.1
 pytz==2017.2
 PyYAML==3.12
