--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ dockerpty==0.4.1
 docopt==0.6.2
 docutils==0.14
 et-xmlfile==1.0.1
+httpagentparser==1.8.2
 jdcal==1.3
 jmespath==0.9.3
 jsmin==2.2.2
@@ -34,7 +35,7 @@ olefile==0.44
 openpyxl==2.4.9
 pathspec==0.5.0
 pilkit==2.0
-Pillow==4.2.1
+Pillow==5.4.1
 polib==1.1.0
 python-dateutil==2.6.1
 pytz==2017.2
