- Clientes segmentados por industrias

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ odecopackdb
 /media/*
 /comandos.txt
 /secretsLocal.json
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
