Actualizando para reparar pagina

--- a/.ebextensions/02_packages.config
+++ b/.ebextensions/02_packages.config
@@ -5,4 +5,5 @@ packages:
     libpng-devel: []
     freetype-devel: []
     gcc-c++: []
-    python34-devel: []
+    python3-devel: []
+    mariadb-devel: []
