--- a/.ebextensions/01_awsbean.config
+++ b/.ebextensions/01_awsbean.config
@@ -1,5 +1,5 @@
 option_settings:
   aws:elasticbeanstalk:application:environment:
-    DJANGO_SETTINGS_MODULE: odecopack.settings
+    DJANGO_SETTINGS_MODULE: odecopack.settings.production
   aws:elasticbeanstalk:container:python:
-    WSGIPath: odecopack/wsgi.py
+    WSGIPath: odecopack.wsgi:application
