--- a/Pipfile
+++ b/Pipfile
@@ -7,20 +7,20 @@ verify_ssl = true
 awsebcli = "==3.10.1"
 
 [packages]
-django = "==1.11.29"
+django = "==4.0.3"
 pillow = "==8.2.0"
-django-rosetta = "==0.7.14"
-django-solo = "==1.1.2"
+django-rosetta = "==0.9.8"
+django-solo = "==2.0.0"
 django-storages = "==1.6.5"
-django-braces = "==1.11.0"
+django-braces = "==1.15.0"
 boto3 = "==1.4.7"
-django-tinymce4-lite = "==1.5.2"
-django-imagekit = "==4.0.1"
-django-redis = "==4.8.0"
-django-redisboard = "==3.0.2"
-django-debug-toolbar = "==1.8"
-django-model-utils = "==3.0.0"
+django-imagekit = "==4.1.0"
+django-redis = "==4.12.1"
+django-redisboard = "==5.0.0"
+django-debug-toolbar = "==3.2.4"
+django-model-utils = "==4.2.0"
 mailchimp3 = "==2.0.18"
+django-tinymce = "==3.3.0"
 
 [requires]
 python_version = "3.8"
